--- a/frontend/src/app/main/pages/proveedores/verProveedor/verProveedor.component.html
+++ b/frontend/src/app/main/pages/proveedores/verProveedor/verProveedor.component.html
@@ -1,5 +1,5 @@
-<button class="rounded-full h-8 w-8 flex items-center justify-center bg-blue-400 mr-3" (click)="toggleModal()">
-    V
+<button class=" mr-3" (click)="toggleModal()" title="Ver informacion de proveedor">
+    <i class="fas fa-eye text-gray-700 fa-lg"></i>
   </button>
   <div *ngIf="showModal" class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center flex">
     <div class=" w-auto my-6 mx-auto w-11/12 md:w-3/4 lg:w-2/4 ">
@@ -8,7 +8,7 @@
         <!--header-->
         <div class="flex items-start justify-between p-5 border-b border-solid border-gray-300 rounded-t">
           <h3 class="text-3xl font-semibold">
-            Modal Title
+            Proveedor {{proveedor.nombre}}
           </h3>
           <button class="p-1 ml-auto bg-transparent border-0 text-black opacity-5 float-right text-3xl leading-none font-semibold outline-none focus:outline-none" (click)="toggleModal()">
             <span class="bg-transparent text-black opacity-5 h-6 w-6 text-2xl block outline-none focus:outline-none">
@@ -17,24 +17,28 @@
           </button>
         </div>
         <!--body-->
-        <div class="p-6 text-left">
-          <div>
-            <p class="my-4 text-gray-600 text-lg leading-relaxed">
-                I always felt like I could do anything. That’s the main
-                thing people are controlled by! Thoughts- their perception
-                of themselves! They're slowed down by their perception of
-                themselves. If you're taught you can’t do anything, you
-                won’t do anything. I was taught I could do everything.
-              </p>
-          </div>
+        <div class="p-6 text-left text-md">
+          <table class="flex rounded">
+            <thead>
+                <tr class="text-left flex flex-col uppercase bg-gray-200 ">
+                    <th class="py-3 px-2">Rif</th>
+                    <th class="py-3 px-2">Nombre</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="text-left flex flex-col">
+
+                    <td class="py-3 px-2">{{proveedor.rif}}</td>
+                    <td class="py-3 px-2">{{proveedor.nombre}}</td>
+        
+                </tr>
+            </tbody>
+        </table>           
         </div>
         <!--footer-->
         <div class="flex items-center justify-end p-6 border-t border-solid border-gray-300 rounded-b">
-          <button class="text-red-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1" type="button" style="transition: all .15s ease" (click)="toggleModal()">
-            Close
-          </button>
-          <button class="bg-green-500 text-white active:bg-green-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1" type="button" style="transition: all .15s ease" (click)="toggleModal()">
-            Save Changes
+          <button class="bg-red-500 text-white active:bg-green-600 text-sm px-4 py-2 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1" type="button" style="transition: all .15s ease" [routerLink]="['/main/registrar-compra', proveedor.id]">
+            Registrar una Compra
           </button>
         </div>
       </div>
