--- a/frontend/src/app/main/pages/usuarios/agregarUsuario/agregarUsuario.component.html
+++ b/frontend/src/app/main/pages/usuarios/agregarUsuario/agregarUsuario.component.html
@@ -5,7 +5,7 @@ type="button"
 >
 Agregar Usuario
 </button>
-<div
+<div 
 *ngIf="showModal"
 class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center flex"
 >
@@ -37,46 +37,50 @@ class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:o
         <div class="w-full pb-6 pt-2">
           <h3 class="text-xl font-bold">Informacion de Cliente</h3>
         </div>
-      <form class="my-4 text-gray-600 text-sm">
+        <div class="w-full" *ngIf="alerta">
+          <app-alert [mensaje]="mensaje" [color]="color" (cerrar)="cerrarAlerta()"></app-alert>
+        </div>
+      <form class="my-4 text-gray-600 text-sm" [formGroup]="formUsuario" (ngSubmit)="enviar()" autocomplete="off" >
           <div class="w-full grid grid-cols-2 lg:grid-cols-6 gap-2">
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
                   <label for="username" class="text-gray-800 mb-2 font-bold">Nombre de Usuario</label>
-                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="username" id="username" placeholder="ej. 13567439">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
+                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="username" id="username" placeholder="ej. 13567439"
+                    formControlName="username" 
+                  >
+          
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-4">
                   <label for="nombre" class=" text-gray-800 mb-2 font-bold">Nombres Y Apellidos</label>
-                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="nombre" id="nombre" placeholder="ej. Juanito Perez">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
+                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="nombre" id="nombre" placeholder="ej. Juanito Perez"
+                    formControlName="nombre" 
+                  >
+
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
                   <label for="correo" class="text-gray-800 mb-2 font-bold">Correo</label>
-                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="correo" id="correo" placeholder="ej. correo@correo.com">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
+                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="correo" id="correo" placeholder="ej. correo@correo.com"
+                    formControlName="email" 
+                  >
+
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
                   <label for="rol" class="text-gray-800 mb-2 font-bold">Rol</label>
-                  <select name="rol" id="rol" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4">
+                  <select name="rol" id="rol" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4"
+                    formControlName="rol_id" 
+                  >
                     <option value="">-- selecciona --</option>
-                    <option value="administrador">Administrador</option>
-                    <option value="vendedor">Vendedor</option>
+                    <option *ngFor="let rol of roles" value="{{rol.id}}">{{rol.rol}}</option>
                   </select>
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
+
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
                 <label for="password" class="text-gray-800 mb-2 font-bold">Contraseña</label>
-                <input type="password" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="password" id="password" placeholder="ingrese su contraseña">
-                <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                  Este campo es obligatorio
-                </span>
+                <input type="password" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="password" id="password" placeholder="ingrese su contraseña"
+                  formControlName="password" 
+                >
+            </div>
+            <div class="col-span-2 lg:col-span-6" *ngIf="error">
+              <error-form [mensaje]="error"></error-form>
             </div>
               <div class="col-span-2 lg:col-span-6">
                   <button type="submit" class="px-4 py-2 bg-red-500 text-lg rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear block mx-auto">Registrar</button>
