--- a/frontend/src/app/main/pages/usuarios/usuarios.component.html
+++ b/frontend/src/app/main/pages/usuarios/usuarios.component.html
@@ -3,75 +3,82 @@
         <h3 class="text-3xl font-bold">Listado de usuarios</h3>
     </div>
     <div class="w-full flex justify-start mb-4">
-        <agregar-usuario></agregar-usuario>
+        <agregar-usuario (registrado)="traerUsuarios()"></agregar-usuario>
     </div>
 
     <div class="bg-white w-full rounded shadow-lg py-4 px-1">
         <div class="w-full flex justify-end align-middle py-2 mb-4 text-sm">
-            <form class="w-full md:w-3/4 lg:w-1/2 grid grid-cols-6 gap-1">
-                <select name="amperaje" id="amperaje" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-2">
-                    <option value="rif">Nombre de usuario</option>
+            <form class="w-full md:w-3/4 lg:w-1/2 grid grid-cols-6 gap-1"
+                [formGroup]="formBusqueda"
+                (ngSubmit)="busqueda()"
+            >
+                <select name="amperaje" id="amperaje" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-2"
+                    formControlName="parametro"
+                >
+                    <option value="username">Nombre de usuario</option>
                     <option value="nombre">Nombre</option>
                   </select>
-                <input type="text" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-3" name="cedula" id="cedula" placeholder="ingrese su busqueda">
+                <input type="text" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-3" name="cedula" id="cedula" placeholder="ingrese su busqueda"
+                formControlName="valorParametro"
+                >
                 <button type="submit" class="px-3 py-1 bg-red-500 rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear col-span-1">Buscar</button>
             </form>
         </div>
         <div class="overflow-y-auto w-full">
             <table class="items-center w-full bg-transparent border-collapse shadow-md text-center text-xs">
-                <thead>
+                <thead class="bg-blue-900 text-white">
                     <tr>
-                        <th
-                            class="bg-gray-100 text-gray-600 align-middle border border-solid border-gray-200 py-3 uppercase border-l-0 border-r-0 whitespace-no-wrap font-semibold">
+                        <th 
+                            class="align-middle border border-solid border-gray-200 py-2  uppercase border-l-0 border-r-0 font-semibold">
                             Nombre de Usuario
                         </th>
                         <th
-                            class="bg-gray-100 text-gray-600 align-middle border border-solid border-gray-200 py-3 uppercase border-l-0 border-r-0 whitespace-no-wrap font-semibold">
+                            class="align-middle border border-solid border-gray-200 py-2  uppercase border-l-0 border-r-0 font-semibold">
                             Nombre
                         </th>
                         <th
-                            class="bg-gray-100 text-gray-600 align-middle border border-solid border-gray-200 py-3 uppercase border-l-0 border-r-0 whitespace-no-wrap font-semibold">
+                            class="align-middle border border-solid border-gray-200 py-2  uppercase border-l-0 border-r-0 font-semibold">
                             Correo
                         </th>
                         <th
-                            class="bg-gray-100 text-gray-600 align-middle border border-solid border-gray-200 py-3 uppercase border-l-0 border-r-0 whitespace-no-wrap font-semibold">
+                            class="align-middle border border-solid border-gray-200 py-2  uppercase border-l-0 border-r-0 font-semibold">
                             Rol
                         </th>
                         <th
-                            class="bg-gray-100 text-gray-600 align-middle border border-solid border-gray-200 py-3 uppercase border-l-0 border-r-0 whitespace-no-wrap font-semibold">
+                            class="align-middle border border-solid border-gray-200 py-2  uppercase border-l-0 border-r-0 font-semibold">
                             
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr *ngFor="let usuario of usuarios">
                         <th
                             class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            fdsfdsafs
+                            {{usuario.username}}
                         </th>
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            Luis Melendez
+                            {{usuario.nombre}}
                         </td>
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            melendez12341@gmail.com
+                            {{usuario.email}}
                         </td>
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            Administrador
+                            {{usuario.rol.rol}}
                         </td>
                         <td
-                            class="flex items-center justify-center border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs p-4">
-                            <ver-usuario></ver-usuario>
-                            <modificar-usuario></modificar-usuario>
+                            class="flex items-center justify-center border-t-0 align-middle border-l-0 border-r-0 p-2">
+                            <ver-usuario [usuario]="usuario"></ver-usuario>
+                            <modificar-usuario [usuario]="usuario" (actualizado)="traerUsuarios()"></modificar-usuario>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div class="w-full flex justify-center mt-4">
+        <div class="w-full flex justify-center mt-4 text-sm" *ngIf="totalPages > 1">
             <button
-                class="px-4 py-2 bg-blue-900 text-sm rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear mr-4">Anterior</button>
+                class="px-4 py-2 bg-blue-900 rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear mr-4" *ngIf="page !== 1" (click)="paginaAnterior()">Anterior</button>
             <button
-                class="px-4 py-2 bg-blue-900 text-sm rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear ">Siguiente</button>
+                class="px-4 py-2 bg-blue-900 rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear" *ngIf="page !== totalPages" (click)="paginaSiguiente()">Siguiente</button>
         </div>
     </div>
 </div>
