--- a/frontend/src/app/main/pages/usuarios/verUsuario/verUsuario.component.html
+++ b/frontend/src/app/main/pages/usuarios/verUsuario/verUsuario.component.html
@@ -1,14 +1,14 @@
-<button class="rounded-full h-8 w-8 flex items-center justify-center bg-blue-400 mr-3" (click)="toggleModal()">
-    V
-  </button>
+<button class="mr-3" (click)="toggleModal()" title="Ver informacion de Usuario">
+  <i class="fas fa-eye text-gray-700 fa-lg"></i>
+</button>
   <div *ngIf="showModal" class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center flex">
     <div class=" w-auto my-6 mx-auto w-11/12 md:w-3/4 lg:w-2/4 ">
       <!--content-->
       <div class="border-0 rounded-lg shadow-lg  flex flex-col w-full bg-white outline-none focus:outline-none">
         <!--header-->
         <div class="flex items-start justify-between p-5 border-b border-solid border-gray-300 rounded-t">
-          <h3 class="text-3xl font-semibold">
-            Modal Title
+          <h3 class="text-2xl font-semibold">
+            Informacion de del usuario {{usuario.username}}
           </h3>
           <button class="p-1 ml-auto bg-transparent border-0 text-black opacity-5 float-right text-3xl leading-none font-semibold outline-none focus:outline-none" (click)="toggleModal()">
             <span class="bg-transparent text-black opacity-5 h-6 w-6 text-2xl block outline-none focus:outline-none">
@@ -16,26 +16,34 @@
             </span>
           </button>
         </div>
-        <!--body-->
+        <!--body--> 
         <div class="p-6 text-left">
-          <div>
-            <p class="my-4 text-gray-600 text-lg leading-relaxed">
-                I always felt like I could do anything. That’s the main
-                thing people are controlled by! Thoughts- their perception
-                of themselves! They're slowed down by their perception of
-                themselves. If you're taught you can’t do anything, you
-                won’t do anything. I was taught I could do everything.
-              </p>
-          </div>
+          <table class="flex rounded text-sm">
+            <thead>
+                <tr class="text-left flex flex-col uppercase bg-gray-200 ">
+                    <th class="py-3 px-2">Nombre de usuario</th>
+                    <th class="py-3 px-2">Nombre</th>
+                    <th class="py-3 px-2">Rol</th>
+                    <th class="py-3 px-2">Correo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="text-left flex flex-col">
+
+                    <td class="py-3 px-2">{{usuario.username}}</td>
+                    <td class="py-3 px-2">{{usuario.nombre}}</td>
+                    <td class="py-3 px-2">{{usuario.rol.rol}}</td>
+                    <td class="py-3 px-2">{{usuario.email}}</td>
+                </tr>
+            </tbody>
+        </table>      
         </div>
         <!--footer-->
         <div class="flex items-center justify-end p-6 border-t border-solid border-gray-300 rounded-b">
           <button class="text-red-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1" type="button" style="transition: all .15s ease" (click)="toggleModal()">
-            Close
+            Cerrar
           </button>
-          <button class="bg-green-500 text-white active:bg-green-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1" type="button" style="transition: all .15s ease" (click)="toggleModal()">
-            Save Changes
-          </button>
+
         </div>
       </div>
     </div>
