--- a/frontend/src/app/main/pages/proveedores/proveedores.component.html
+++ b/frontend/src/app/main/pages/proveedores/proveedores.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="overflow-y-auto w-full text-xs text-center">
             <table class="table-auto shadow-lg bg-white w-full">
-                <thead class="bg-purple-400 text-white">
+                <thead class="bg-blue-900 text-white">
                     <tr>
                         <th
                             class="align-middle border border-solid border-gray-200 py-2  uppercase border-l-0 border-r-0 font-semibold">
