--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -179,6 +179,11 @@
               <li class="text-white cursor-pointer pl-4 text-sm py-2 font-bold block" [routerLink]="['/main/consultar-compras']"><i class="text-md fas fa-fingerprint mr-3 transition-all duration-700 ease-in-out"></i> Consultar</li>
             </ul>
         </li>
+        <li class="items-center ">
+          <a [routerLink]="['/main/bitacora']" class="text-gray-800 lg:text-white cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-105 text-md py-4 font-bold block">
+            <i class="text-xl fas fa-fingerprint mr-3"></i>
+            Bitacora</a>
+        </li>
       </ul>
     </div>
   </div>
