--- a/frontend/src/app/main/pages/consultar-compra/consultar-compra.component.html
+++ b/frontend/src/app/main/pages/consultar-compra/consultar-compra.component.html
@@ -8,13 +8,10 @@
             <h3 class="text-2xl">Listado de Compras</h3>
         </div>
         <div class="w-full flex justify-end align-middle mb-6 text-sm">
-            <form class="w-full md:w-3/4 lg:w-3/5 grid grid-cols-12 gap-1">
+            <form class="w-full md:w-3/4 lg:w-3/5 grid grid-cols-12 gap-1" [formGroup]="">
                 <select name="amperaje" id="amperaje" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-3">
-                    <option value="comprobante">Numero de Comprobante</option>
-                    <option value="rango">Rango de fechas</option>
-                    <option value="fecha">fecha</option>
                     <option value="usuario">Usuario</option>
-                    <option value="proveedor">Proveedor</option>
+                    <option value="cliente">Proveedor</option>
                   </select>
                 <input type="text" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-7" name="usuario" id="usuario" placeholder="Ingrese su busqueda">
                 <button type="submit" class="px-3 py-1 bg-red-500 rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear col-span-2">Buscar</button>
@@ -50,21 +47,24 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr *ngIf="compras.length === 0" >
+                        <td colspan="6" class="border-t-0 align-middle border-l-0 border-r-0 p-2 text-center">No hay Compras registradas</td>
+                    </tr>
+                    <tr *ngFor="let compra of compras">
                         <th class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            0001
+                            {{compra.id}}
                         </th>
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            20/12/2020
+                            {{compra.fecha | amLocale:'es' | amDateFormat:'MMMM Do YYYY, h:mm:ss a'}}
                         </td>
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            Proveedor
+                            {{compra.proveedor.nombre}}
                         </td>
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            Usuario
+                            {{compra.usuario.username}}
                         </td>
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            1000$
+                            {{compra.total | currency}} <br> {{ compra.total * precioDolar | currency:'Bs.S '}}
                         </td>
                         <td class="flex items-center justify-center border-t-0 align-middle border-l-0 border-r-0 p-2">
                             <button class="h-8 w-8 rounded-full bg-blue-600 mr-2">V</button>
@@ -74,6 +74,12 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="w-full flex justify-center mt-4 text-sm" *ngIf="totalPages > 1">
+            <button
+                class="px-4 py-2 bg-blue-900 rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear mr-4" *ngIf="page !== 1" (click)="paginaAnterior()">Anterior</button>
+            <button
+                class="px-4 py-2 bg-blue-900 rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear" *ngIf="page !== totalPages" (click)="paginaSiguiente()">Siguiente</button>
         </div>
     </div>
 </div>
